--- a/feature/src/main/res/layout/fragment_detail.xml
+++ b/feature/src/main/res/layout/fragment_detail.xml
@@ -97,6 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/currentTime">
