--- a/feature/src/main/res/layout/fragment_detail.xml
+++ b/feature/src/main/res/layout/fragment_detail.xml
@@ -19,14 +19,12 @@
         app:layout_constraintWidth_percent="0.8"
         tools:src="@android:drawable/ic_menu_gallery" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.xhan.musicplayer.feature.view.MarqueeTextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:ellipsize="end"
         android:gravity="center"
-        android:maxLines="2"
         android:textSize="24dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,28 +32,24 @@
         app:layout_constraintTop_toBottomOf="@id/albumArt"
         tools:text="Song Title" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.xhan.musicplayer.feature.view.MarqueeTextView
         android:id="@+id/artist"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:ellipsize="end"
         android:gravity="center"
-        android:maxLines="1"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title"
         tools:text="Artist Name" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <com.xhan.musicplayer.feature.view.MarqueeTextView
         android:id="@+id/album"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:ellipsize="end"
         android:gravity="center"
-        android:maxLines="1"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
