Feat: #4 mini player 구현

--- a/feature/src/main/res/layout/fragment_list.xml
+++ b/feature/src/main/res/layout/fragment_list.xml
@@ -12,11 +12,23 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/mini_player"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/item_track" />
+
+        <com.xhan.musicplayer.feature.view.MiniPlayerView
+            android:id="@+id/mini_player"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            android:background="@color/player_background"
+            android:elevation="8dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/emptyText"
