--- a/feature/src/main/res/navigation/nav_graph.xml
+++ b/feature/src/main/res/navigation/nav_graph.xml
@@ -11,10 +11,10 @@
         <action
             android:id="@+id/action_list_to_detail"
             app:destination="@id/detailFragment"
-            app:enterAnim="@android:anim/slide_in_left"
-            app:exitAnim="@android:anim/slide_out_right"
-            app:popEnterAnim="@android:anim/slide_in_left"
-            app:popExitAnim="@android:anim/slide_out_right" />
+            app:enterAnim="@anim/slide_up_fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/slide_down_fade_out" />
     </fragment>
 
     <fragment
