--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="player_background">#FF1C1C1E</color>
-    <color name="player_text">#FFFFFFFF</color>
-    <color name="player_text_secondary">#FFB0B0B0</color>
+    <!-- 배경 -->
+    <color name="background">#FFFFFFFF</color>
+    <color name="surface">#FFFFFFFF</color>
+
+    <!-- 텍스트 -->
+    <color name="text_primary">#FF000000</color>
+    <color name="text_secondary">#FF666666</color>
+
+    <!-- 아이콘 -->
+    <color name="icon_tint">#FF000000</color>
+
+    <!-- Player -->
+    <color name="player_background">#FFFFFFFF</color>
+    <color name="player_text">#FF000000</color>
+    <color name="player_text_secondary">#FF666666</color>
 </resources>
