--- a/feature/src/main/res/layout/fragment_detail.xml
+++ b/feature/src/main/res/layout/fragment_detail.xml
@@ -31,7 +31,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_arrow_down" />
+            app:navigationIcon="@drawable/ic_arrow_down"
+            app:navigationIconTint="@{true}" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/albumArt"
@@ -157,6 +158,7 @@
                 android:contentDescription="@string/repeat_mode"
                 android:onClick="@{() -> vm.onRepeatClick()}"
                 app:repeatModeIcon="@{state.repeatMode}"
+                app:tint="@color/icon_tint"
                 tools:src="@drawable/ic_repeat_off" />
 
             <ImageButton
@@ -167,6 +169,7 @@
                 android:contentDescription="@string/shuffle"
                 android:onClick="@{() -> vm.onShuffleClick()}"
                 app:shuffleIcon="@{state.shuffleEnabled}"
+                app:tint="@color/icon_tint"
                 tools:src="@drawable/ic_shuffle_off" />
 
         </LinearLayout>
@@ -189,7 +192,8 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/previous"
                 android:onClick="@{() -> vm.onPreviousClick()}"
-                android:src="@drawable/ic_skip_previous" />
+                android:src="@drawable/ic_skip_previous"
+                app:tint="@color/icon_tint" />
 
             <ImageButton
                 android:id="@+id/playPauseButton"
@@ -201,6 +205,7 @@
                 android:contentDescription="@string/play_pause"
                 android:onClick="@{() -> vm.onPlayPauseClick()}"
                 app:playPauseIcon="@{state.isPlaying}"
+                app:tint="@color/icon_tint"
                 tools:src="@drawable/ic_play" />
 
             <ImageButton
@@ -210,7 +215,8 @@
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/next"
                 android:onClick="@{() -> vm.onNextClick()}"
-                android:src="@drawable/ic_skip_next" />
+                android:src="@drawable/ic_skip_next"
+                app:tint="@color/icon_tint" />
 
         </LinearLayout>
 
