--- a/feature/src/main/res/layout/item_track.xml
+++ b/feature/src/main/res/layout/item_track.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    android:padding="12dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/albumArt"
         android:layout_width="56dp"
         android:layout_height="56dp"
-        android:scaleType="centerCrop"
         android:contentDescription="@string/album_art"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:src="@android:drawable/ic_menu_gallery" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -26,11 +26,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
-        android:textSize="16dp"
-        android:maxLines="1"
         android:ellipsize="end"
-        app:layout_constraintStart_toEndOf="@id/albumArt"
+        android:maxLines="1"
+        android:textColor="@color/text_primary"
+        android:textSize="16dp"
         app:layout_constraintEnd_toStartOf="@id/duration"
+        app:layout_constraintStart_toEndOf="@id/albumArt"
         app:layout_constraintTop_toTopOf="@id/albumArt"
         tools:text="Title" />
 
@@ -40,11 +41,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="4dp"
-        android:textSize="14dp"
-        android:maxLines="1"
         android:ellipsize="end"
-        app:layout_constraintStart_toEndOf="@id/albumArt"
+        android:maxLines="1"
+        android:textColor="@color/text_secondary"
+        android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/albumArt"
         app:layout_constraintTop_toBottomOf="@id/title"
         tools:text="Artist Name" />
 
@@ -52,6 +54,7 @@
         android:id="@+id/duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/text_secondary"
         android:textSize="14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/albumArt"
@@ -63,9 +66,9 @@
         android:layout_height="0dp"
         android:background="?attr/colorPrimary"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
