--- a/feature/src/main/res/layout/item_track.xml
+++ b/feature/src/main/res/layout/item_track.xml
@@ -20,6 +20,23 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@android:drawable/ic_menu_gallery" />
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/nowPlayingIndicator"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/bg_now_playing_overlay"
+        android:contentDescription="@string/play_pause"
+        android:padding="16dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_play"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/albumArt"
+        app:layout_constraintEnd_toEndOf="@id/albumArt"
+        app:layout_constraintStart_toStartOf="@id/albumArt"
+        app:layout_constraintTop_toTopOf="@id/albumArt"
+        app:tint="@android:color/white"
+        tools:visibility="visible" />
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/title"
         android:layout_width="0dp"
@@ -59,16 +76,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/albumArt"
         tools:text="3:45" />
-
-    <View
-        android:id="@+id/nowPlayingIndicator"
-        android:layout_width="4dp"
-        android:layout_height="0dp"
-        android:background="?attr/colorPrimary"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
