--- a/feature/src/main/res/layout/fragment_list.xml
+++ b/feature/src/main/res/layout/fragment_list.xml
@@ -33,23 +33,21 @@
             android:layout_height="0dp"
             android:background="@color/background"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toTopOf="@id/mini_player"
+            app:layout_constraintBottom_toTopOf="@id/mini_player_compose"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             tools:listitem="@layout/item_track" />
 
-        <com.xhan.musicplayer.feature.view.MiniPlayerView
-            android:id="@+id/mini_player"
+        <!-- Compose로 전환 -->
+        <androidx.compose.ui.platform.ComposeView
+            android:id="@+id/mini_player_compose"
             android:layout_width="0dp"
-            android:layout_height="64dp"
-            android:background="@color/player_background"
+            android:layout_height="wrap_content"
             android:elevation="8dp"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:visibility="visible" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/emptyText"
