--- a/feature/src/main/res/layout/fragment_list.xml
+++ b/feature/src/main/res/layout/fragment_list.xml
@@ -12,7 +12,7 @@
             android:id="@+id/toolbar"
             android:layout_width="0dp"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/surface"
+            android:background="@color/background"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
